tests/ui/app_error/fail/missing_kind.rs
use masterror::Error;

#[derive(Debug, Error)]
#[error("oops")]
#[app_error(message)]
struct MissingSpec;

fn main() {}
